se agrego un aliados

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body>
     <header>
+     <div class="contenido">
       <div class="header__superior">
         <div class="logo">
           <img src="./src/galeria/imagenes/js.png" alt="logo de la fundacion">
         </div>
-        <div class="search">
-          <input type="search" name="" id="" placeholder="¿Que deseas buscar?">
-        </div>
+       <div class="datos-fundacion">
+          <p>Contacto: 6719516 | 674390 </p>
+          <p>correo@correo.com</p>
+          <p>| Nit: 492919</p>
+          <p>| Quibdó - Choco cra 6ta # 24-29 </p>
+       </div>
       </div>
       <div class="container__menu">
           <div class="menu">
@@ -44,7 +48,7 @@
                     <li><a href="#">Mision</a></li>
                     <li><a href="#">Vision</a></li>
                     <li><a href="#">Programas Sociales</a></li>
-                    <li><a href="#">Aliados</a></li>
+                    <li><a href="#aliados">Aliados</a></li>
                     <li><a href="#">Cifras de beneficiados</a></li>
                   </ul>
                 </li>
@@ -54,6 +58,47 @@
             </nav>
           </div>
       </div>
+     </div>
     </header>
+    <div class="fondos">
+      <div class="slider">
+        <ul>
+          <li><img src="./src/galeria/imagenes/slider1.jpeg" alt="imagen1"></li>
+          <li><img src="./src/galeria/imagenes/slider2.jpg" alt="imagen2"></li>
+          <li><img src="./src/galeria/imagenes/slider3.png" alt="imagen3"></li>
+          <li><img src="./src/galeria/imagenes/slider4.jpg" alt="imagen4"></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="organizaciones" id="aliados">
+      <h2>Organizaciones Aliadas</h2>
+      <div class="cajas">
+        <div class="cajas-organizaciones caja-1">
+          <div class="descrpcion">
+            <h3>netflix</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores aut consequatur, quaerat unde illo maiores aliquid suscipit illum eveniet praesentium, facere earum quam. Deserunt vitae at ea veniam ipsam animi.</p>
+          </div>
+        </div>
+        <div class="cajas-organizaciones caja-2">
+          <div class="descrpcion">
+            <h3>Apple</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores aut consequatur, quaerat unde illo maiores aliquid suscipit illum eveniet praesentium, facere earum quam. Deserunt vitae at ea veniam ipsam animi.</p>
+          </div>
+        </div>
+        <div class="cajas-organizaciones caja-3">
+          <div class="descrpcion">
+            <h3>nasa</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores aut consequatur, quaerat unde illo maiores aliquid suscipit illum eveniet praesentium, facere earum quam. Deserunt vitae at ea veniam ipsam animi.</p>
+          </div>
+        </div>
+        <div class="cajas-organizaciones caja-4">
+          <div class="descrpcion">
+            <h3>Area 51</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores aut consequatur, quaerat unde illo maiores aliquid suscipit illum eveniet praesentium, facere earum quam. Deserunt vitae at ea veniam ipsam animi.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
