se agrego aliados 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="menu">
             <input type="checkbox" name="" id="check__menu">
             <label id="label__check" for="check__menu">
-              <i class="fa-solid fa-bars icon__menu"></i>
+              <i class="fa-solid fa-bars icon__menu">.</i>
             </label>
             <nav>
               <ul>
