--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <p>| Quibdó - Choco cra 6ta # 24-29 </p>
        </div>
       </div>
+      <!-- inicio del menu -->
       <div class="container__menu">
           <div class="menu">
             <input type="checkbox" name="" id="check__menu">
@@ -53,13 +54,15 @@
                   </ul>
                 </li>
                 <li><a href="#">Testimonios</a></li>
-  
+                <li><a href="./src/html/galery.html">galeria</a></li>
               </ul>
             </nav>
           </div>
       </div>
      </div>
     </header>
+
+    <!-- inicio del slider -->
     <div class="fondos">
       <div class="slider">
         <ul>
@@ -70,7 +73,7 @@
         </ul>
       </div>
     </div>
-
+    <!-- inicio de las organizaciones -->
     <div class="organizaciones" id="aliados">
       <h2>Organizaciones Aliadas</h2>
       <div class="cajas">
@@ -100,5 +103,21 @@
         </div>
       </div>
     </div>
+
+    <!-- inicio del footer -->
+    <footer class="pie-pagina">
+      <div class="datos1">
+        <div class="datos-fundacion">
+          <p>Contacto: 6719516 | 674390 </p>
+          <p>correo@correo.com</p>
+          <p>| Nit: 492919</p>
+          <p>| Quibdó - Choco cra 6ta # 24-29 </p>
+        </div>
+      </div>
+      <div class="datos2">
+        <p>&copy; <strong>fudacion de santa sofia 2022</strong></p>
+      </div>
+      
+    </footer>
 </body>
 </html>
